# mutk

./: .clang-tidy  .codecov.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  meson.build  mutk.sublime-project  mutk.sublime-project.in  notes.txt
.circleci/: config.yml
.github/workflows/: check.yaml
conf/: .gitattributes  configure.cmake  cppcheck_suppressions.txt  devopt.cmake  gitmeta.cmake  rpath.cmake  semver.cmake  version.cmake
contrib/: CMakeLists.txt  meson.build
contrib/doctest/doctest/: doctest.h
contrib/minionrng/: minion.hpp
coverage/: CMakeLists.txt
doc/: developer.md  developer_notes.txt
modules/: FindHTSlib.cmake  devopt.cmake
src/: CMakeLists.txt  meson.build  mutk-doctest.cc  mutk-genseed.cc  mutk-genseed.cpp  mutk-graph.cpp  mutk-modelfit.cpp  mutk-version.cc  mutk-version.cpp  mutk.cc.in  mutk.cpp.in  mutk.sh.in  subcommand.hpp  verb.hpp  version.h.in  version.h.in.in
src/contrib/: CMakeLists.txt
src/include/mutk/: graph.hpp  graph_builder.hpp  graph_peeler.hpp  inheritance_model.hpp  memory.hpp  message.hpp  mutation.hpp  mutk.hpp  pedigree.hpp  peeling.hpp  potential.hpp  relationship_graph.hpp  utility.hpp  vcf.hpp
src/include/mutk/detail/: graph.hpp
src/lib/: CMakeLists.txt  call.cpp  cloning_potential.cpp  graph_builder.cpp  graph_peeler.cpp  junction_tree.cpp  junction_tree.hpp  meson.build  mutation.cpp  mutation_builder.cpp  mutation_testing.hpp  newick.cpp  pedigree.cpp  peeling.cpp  potential-cloning.cpp  potential-mating.cpp  potential-selfing.cpp  potential.cpp  potential_cloning.cpp  relationship_graph.cpp  unit_testing.hpp  utility.cpp  vcf.hpp  version.cc  version.cpp
tests/: CMakeLists.txt  libmutk-doctest-tests.txt  meson.build  peeling.R
